[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fugashi[unidic]>=1.4.0",
    "pydantic-settings>=2.7.1",
    "python-terrier>=0.13.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "obret",
]
namespaces = false

[tool.setuptools]
provides = ["obret"]
