[project]
name = "obsidian-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cython>=3.0.12",
    "fastapi>=0.115.12",
    "fugashi[unidic]>=1.4.0",
    "mistune>=3.1.3",
    "pydantic-settings>=2.7.1",
    "python-terrier>=0.13.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["obret"] }

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
